# writing_a_compiler_in_rust_monkey

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
benches/: monkey_benchmarks.rs
examples/: array_operations.monkey  basic_demo.monkey  fibonacci.monkey  for_loops.monkey  simple_example.monkey  while_loops.monkey
src/: lib.rs  main.rs
src/ast/: fmt.rs  mod.rs
src/evaluator/: builtins.rs  errors.rs  expressions.rs  mod.rs  operators.rs  something.rs  statements.rs
src/lexer/: fmt.rs  mod.rs
src/object/: environment.rs  fmt.rs  mod.rs
src/parser/: fmt.rs  helpers.rs  mod.rs  precedence.rs
src/parser/tests/: collections.rs  control_flow.rs  errors.rs  expressions.rs  functions.rs  mod.rs  precedence.rs  statements.rs
src/repl/: enhanced.rs  mod.rs
src/token/: fmt.rs  from.rs  intern.rs  mod.rs
