[package]
name = "monkey-interpreter-rs"
version = "0.2.0"
edition = "2021"
authors = ["samidarko"]
description = "A complete interpreter for the Monkey programming language implemented in Rust"
documentation = "https://docs.rs/monkey-interpreter-rs"
homepage = "https://github.com/samidarko/monkey-interpreter-rs"
repository = "https://github.com/samidarko/monkey-interpreter-rs"
license = "MIT"
keywords = ["interpreter", "compiler", "programming-language", "monkey", "rust"]
categories = ["compilers", "development-tools"]
readme = "README.md"
exclude = [".git/", "target/", "*.swp", "*.swo"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[[bin]]
name = "monkey"
path = "src/main.rs"
