[package]
name = "monkey-interpreter-rs"
version = "0.2.0"
edition = "2021"
authors = ["samidarko"]
description = "A complete interpreter for the Monkey programming language implemented in Rust"
documentation = "https://docs.rs/monkey-interpreter-rs"
homepage = "https://github.com/samidarko/monkey-interpreter-rs"
repository = "https://github.com/samidarko/monkey-interpreter-rs"
license = "MIT"
keywords = ["interpreter", "compiler", "programming-language", "monkey", "rust"]
categories = ["compilers", "development-tools"]
readme = "README.md"
exclude = [".git/", "target/", "*.swp", "*.swo"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
smallvec = "1.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "monkey"
path = "src/main.rs"

[[bench]]
name = "monkey_benchmarks"
harness = false
